add portfolio.html file

--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<title>Braylons Amazing Super Fantastic Ultimate Unmissable Website</title>
     </head>
 
     <body>
+        <div>
+            <nav>
 
+            </nav>
+
+            <main>
+                <!-- Sidebar section -->
+                <div>
+                    <img>
+                </div>
+
+                <!-- Content section -->
+                <div>
+                    <h2>Braylon Smith</h2>
+                    <p> Student at DTSMA </p>
+                <!-- Interests section -->
+                <div>
+                    <h3> Interests </h3>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                </div>
+
+            </main>
+        </div>
     </body>
     </html>    
