--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,7 @@
                 display: flex;
                 padding: 10px;
             }
+            <img src="tinyurl.com/mr2np6fn">
             h1 {
                 display: flex;
                 align-items: center;
@@ -87,7 +88,7 @@
             <h1>Braylons Amazing Super Fantastic Ultimate Unmissable Website</h1>
             <ul id="nav-ul">
                <li class="nav-li">
-               <a class="nav-a" href="index.html">Home</a>
+               <a class="nav-a" href="Index.html">Home</a>
              </li>
              <li class="nav-li">
                <a class="nav-a" href="portfolio.html">Portfolio</a>
@@ -98,6 +99,7 @@
         <div class="content">
             <h1>Portfolio</h1>
             <ul id="portfolio">
+                <img src="https://tinyurl.com/ms6wbm8b">
                 <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
                 <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
                 <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
