refactor to create 100 circles using loops

--- a/Index.html
+++ b/Index.html
@@ -73,7 +73,7 @@
                 <h1>Braylons Amazing Super Fantastic Ultimate Unmissable Website</h1>
                 <ul id="nav-ul">
                     <li class="nav-li">
-                        <a href="Index.html"> Home </a>
+                        <a href="index.html"> Home </a>
                     <li class="nav-li">
                         <a href="portfolio.html"> Portfolio </a>
                 </ul>
