--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
             <h1>Braylons Amazing Super Fantastic Ultimate Unmissable Website</h1>
             <ul id="nav-ul">
                <li class="nav-li">
-               <a class="nav-a" href="Index.html">Home</a>
+               <a class="nav-a" href="index.html">Home</a>
              </li>
              <li class="nav-li">
                <a class="nav-a" href="portfolio.html">Portfolio</a>
